# HandEyeCalibration

./: CMakeLists.txt  README.md  main.cpp
cmake/: FindAstra.cmake  FindAuBo.cmake  FindOpenCV.cmake  Findfreenect2.cmake
src/: CMakeLists.txt  CameraIntrinsicCalibration.cpp  CameraIntrinsicCalibration2.cpp  CameraIntrinsicFromFiles.cpp  HandInEyeCalibration.cpp  HandInEyeCapture.cpp  HandInEyeCaptureAuto.cpp  HandInEyeVerify2.cpp  HandToEyeCalibration.cpp  HandToEyeCapture.cpp  HandToEyeCaptureAuto.cpp  HandToEyeVerify.cpp  HandToEyeVerify2.cpp
src/camera/: AstraCamera.cpp  AstraCamera.h  AstraMain.cpp  CMakeLists.txt  KinectCamera.cpp  KinectCamera.h
src/robot/: CMakeLists.txt  Robot.cpp  Robot.h
src/test/: CMakeLists.txt  TestXml.cpp
src/tinyxml/: CMakeLists.txt  XmlUtil.h
src/utils/: CMakeLists.txt  Rotation3DUtils.cpp  Rotation3DUtils.h
